k8s/l3gl-devops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productapi
  namespace: devops-l3gl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productapi
  template:
    metadata:
      labels:
        app: productapi
    spec:
      containers:
        - name: productapi
          image: 77862/fadilou-moustapha:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 250Mi
            limits:
              cpu: 400m
              memory: 500Mi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8086
            initialDelaySeconds: 300
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8086
            initialDelaySeconds: 360
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: productapi-service
  namespace: devops-l3gl
spec:
  type: ClusterIP
  ports:
    - port: 8086
      targetPort: 8086
      protocol: TCP
  selector:
    app: productapi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productapi-ingress
  namespace: devops-l3gl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /l3gl(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: productapi-service
                port:
                  number: 8086
